@@ -89,7 +89,7 @@ Don't display named instances of variation fonts.
 .TP
 .BI \-k \ keys
 Emulate sequence of keystrokes upon start-up.
-If the keystrokes end with 'q', the program operates in batch mode.
+If the keystrokes contain 'q', the program operates in batch mode.
 .
 .TP
 .B \-v
